--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+      - name: Cd into frontend directory
+        uses: cd frontend
       - name: Install dependencies
         run: npm install
       - name: Build
