--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Cd into frontend directory
-        uses: cd frontend
+        run: cd frontend
       - name: Install dependencies
         run: npm install
       - name: Build
